--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/fullscreenp5.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Arranging Game</title>        
     </head>
